# SaveReminderSSE

./: .gitignore  CHANGELOG.md  LICENSE  README.md
cpp/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cpp/src/: main.cpp
docs/: build.md  creation-kit-setup.md  readme.txt
mcm/: SaveReminderSSE_defaults.ini  settings.ini
papyrus/_compiler/MCMHelper/scripts/: MCM.psc  MCM_ConfigBase.psc
papyrus/source/: SRSSE_MCM.psc  SRSSE_Native.psc  SRSSE_ReminderController.psc
plugin/: SaveReminderSSE.esp
tools/: bump-version.ps1  setup.ps1
tools/release/: make-release.ps1  package.ps1
